Edit from Pheaktra

--- a/Homepage.html
+++ b/Homepage.html
@@ -12,9 +12,9 @@
     <img src="/LamBoGhini.jpg" alt="My Photo" width="65%" height="500px">
     <h2>Recent Posts</h2>
     <ul>
-     <li><a href="RegisterPage.html">click here to Register</a></li>
-     <li><a href="post2.html">Logout</a></li>
-     <li><a href="post3.html">Login</a></li>
+     <li><a href="RegisterForm.html">click here to Register</a></li>
+     <li><a href="LoginPage.html">Login</a></li>
+     <li><a href="Reset_password.html">Reset password</a></li>
     </ul>
 </body>
 </html>
